--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://52.204.122.159:9002/</sonar.host.url>
+		<sonar.host.url>http://http://3.80.121.208:9002/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>Shahabbhai@786</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
